switched env variables to a .env file instead of yaml and set up first basic api call for flights - confirmed working :D

--- a/backend-clicktrip/Gemfile
+++ b/backend-clicktrip/Gemfile
@@ -43,3 +43,6 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 # used for api calls
 gem 'rest-client', '>= 2.0'
+
+# used for setting up environment variables that actually work
+gem 'dotenv-rails'
