--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 backend-clicktrip/config/local_env.yaml
-
+backend-clicktrip/.env
 
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
