everything is currently on sessionStorage but lots of things are broken

--- a/frontent-clicktrip/public/manifest.json
+++ b/frontent-clicktrip/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "ClickTrip",
-  "name": "ClickTrip",
+  "name": "Front-end UI for ClickTrip",
   "icons": [
     {
       "src": "favicon.ico",
